<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.bp</groupId>
    <artifactId>jahap</artifactId>
    <name>jahap</name>

    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    
    <organization>
        <!-- Used as the 'Vendor' for JNLP generation -->
        <name>Open Jahap Community</name>
    </organization>

    <properties>
        <slf4j.version>1.6.1</slf4j.version>
        <eclipselink.version>2.5.0</eclipselink.version>
    </properties>

    <build>

        <finalName>jahap</finalName>

        <plugins>
            
            
            
              
              <plugin>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                     
                    <url>jdbc:postgresql://localhost:5432/JAHAPs</url>
                    <user>root</user>
                    <password>gandhi</password>
                     
                       
                </configuration>
                
               </plugin>

            <plugin>
                <groupId>com.zenjava</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>2.0</version>
                <configuration>

                    <mainClass>org.jahap.MainApp</mainClass>

                    <!-- only required if signing the jar file -->
                    <keyStoreAlias>example-user</keyStoreAlias>
                    <keyStorePassword>example-password</keyStorePassword>
                    <allPermissions>true</allPermissions>

                </configuration>
            </plugin>
                   
   <plugin>
    <!-- Build an executable JAR -->
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-jar-plugin</artifactId>
    <configuration>
    <archive>
      <manifest>
      <!-- <addClasspath>true</addClasspath> -->
      <!-- <classpathPrefix>lib/</classpathPrefix> -->
          <mainClass>org.jahap.MainApp</mainClass>
          <packageName>org.jahap</packageName>
      </manifest>
       <manifestEntries>
           <mode>development</mode>
           <url>${pom.url}</url>
         </manifestEntries>
    </archive>
     </configuration>
    </plugin>
                   
                   
                   
              <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.16</version>
                    <configuration>
                         <skipTests>true</skipTests>
                    </configuration>
              </plugin>
             <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					
				<configuration>
					<finalName>uber-${artifactId}-${version}</finalName>
                                        <filters>
                                            <filter>
                                               <artifact>*:*</artifact>
                                                  <excludes>
                                                     <exclude>META-INF/*.SF</exclude>
                                                     <exclude>META-INF/*.DSA</exclude>
                                                     <exclude>META-INF/*.RSA</exclude>
                                                  </excludes>
                                               </filter>
                                            </filters>
                                        <transformers>
                                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <mainClass>org.jahap.MainApp</mainClass>
                                        </transformer>
                                    </transformers>
				</configuration>
                               </execution>
				</executions> 
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArguments>
                    <bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/jfxrt.jar</bootclasspath>
                </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javancss-maven-plugin</artifactId>
                <version>2.1</version>
            </plugin>
        </plugins>
    </build>
    <reporting>
    <plugins>
     <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javancss-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
          
          <excludes>
            <exclude>**/revaccountsbean.java</exclude>
            <exclude>**/Catbean.java</exclude> 
            <exclude>**/Locationbean.java</exclude>
            <exclude>**/vattypesbean.java</exclude>
            <exclude>**/occbean.java</exclude>
            <exclude>**/PaymentguiController.java</exclude>
          </excludes>
        </configuration>
                
            </plugin>
        </plugins>
    </reporting>
    <repositories>
        <repository>
             <id>sonatype-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>
    <dependencies>
        
        <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>9.3-1102-jdbc41</version>
        </dependency>

        <dependency>
    <groupId>org.easybatch</groupId>
    <artifactId>easybatch-core</artifactId>
    <version>2.2.0</version>
</dependency>
        
        <!-- MigLayout -->

        <dependency>
            <groupId>com.miglayout</groupId>
            <artifactId>miglayout-javafx</artifactId>
            <version>4.2</version>
        </dependency>

        <!-- Apache Commons -->

        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <!-- Logging  -->

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
         <!--    Jodatime  -->
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.3</version>
        </dependency>
         <!-- Testframeworks -->
         
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
       <dependency>
            <groupId>org.dbunit</groupId>
            <artifactId>dbunit</artifactId>
            <version>2.5.0</version>
        </dependency>
         
         <!-- Reporting tool -->
       
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>5.2.0</version>
        </dependency>
        
       
        <!-- Database connector -->
        
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>eclipselink</artifactId>
            <version>2.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.core</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.jpa</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
       <!--
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.jpa.modelgen</artifactId>
            <version>2.6.0-SNAPSHOT</version>
        </dependency>
        -->
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.moxy</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.sdo</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.oracle</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.oracle.nosql</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.jpars</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.dbws</artifactId>
            <version>${eclipselink.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-maven-plugin</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
            <version>2.5.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>6.0</version>
        </dependency>
    </dependencies>

</project>
